--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/sesver
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.show-sql=true
+
+spring.jpa.show-sql=true 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
 spring.profiles.active=@spring.profiles.active@
+
+
+#security
+jwt.secret = secret
+jwt.expiration = 3600
